Address review comments
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -55,17 +55,17 @@ spec:
               defaultStorageClassOptions:
                 properties:
                   fileSystemFormat:
+                    default: ext4
                     type: string
                   k8sStorageClassName:
+                    default: cloud-director-default
                     type: string
                   useDeleteReclaimPolicy:
+                    default: false
                     type: boolean
                   vcdStorageProfileName:
                     type: string
                 required:
-                - fileSystemFormat
-                - k8sStorageClassName
-                - useDeleteReclaimPolicy
                 - vcdStorageProfileName
                 type: object
               org:
