--- a/controllers/cluster_scripts/cloud_init_control_plane.yaml
+++ b/controllers/cluster_scripts/cloud_init_control_plane.yaml
@@ -15,6 +15,22 @@ write_files:
       name: vcloud-basic-auth
       namespace: kube-system
     ---
+- path: /root/default-storage-class.yaml
+  owner: root
+  content: |
+    ---
+    kind: StorageClass
+    apiVersion: storage.k8s.io/v1
+    metadata:
+      annotations:
+        storageclass.kubernetes.io/is-default-class: "true"
+      name: "%s"
+    provisioner: named-disk.csi.cloud-director.vmware.com
+    reclaimPolicy: "%s"
+    parameters:
+      storageProfile: "%s"
+      filesystem: "%s"
+    ---
 - path: /root/control_plane.sh
   owner: root
   content: |
@@ -123,23 +139,7 @@ write_files:
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.default_storage_class.install.status in_progress"
     storage_class_enabled=%s
     if [[ "$storage_class_enabled" == "true" ]]; then
-        storage_class_name=%s
-        vcd_storage_profile_name=%s
-        reclaim_policy=%s
-        filesystem=%s
-        cat << EOF | kubectl apply -f -
-    kind: StorageClass
-    apiVersion: storage.k8s.io/v1
-    metadata:
-      annotations:
-        storageclass.kubernetes.io/is-default-class: "false"
-      name: ${storage_class_name}
-    provisioner: named-disk.csi.cloud-director.vmware.com
-    reclaimPolicy: ${reclaim_policy}
-    parameters:
-      storageProfile: "${vcd_storage_profile_name}"
-      filesystem: ${filesystem}
-    EOF
+      kubectl apply -f /root/default-storage-class.yaml
     fi
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.default_storage_class.install.status successful"
 
