--- a/examples/capi-quickstart.yaml
+++ b/examples/capi-quickstart.yaml
@@ -37,6 +37,11 @@ spec:
     username: username # username of the VCD persona creating the cluster. If system administrator is the user, please use 'system/administrator' as the username.
     password: vmware # password associated with the user creating the cluster
     refreshToken: "" # refresh token of the client registered with VCD for creating clusters. username and password can be left blank if refresh token is provided
+  defaultStorageClassOptions: # default storage class configuration options. include this field only if a default storage class needs to be created
+    vcdStorageProfileName: "*" # name of the VCD storage profile used to create the storage class
+    k8sStorageClassName: "vcd-dev-disk" # name of the storage class in kubernetes
+    useDeleteReclaimPolicy: true # if set to true, Delete will be used as the Reclaim policy for the storage class. Else, Retain will be used as the reclaim policy
+    fileSystemFormat: "ext4" # file system format for the persistent volumes created from the storage class
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
 kind: VCDMachineTemplate
