--- a/infrastructure-vcd/v0.5.1/clusterctl.yaml
+++ b/infrastructure-vcd/v0.5.1/clusterctl.yaml
@@ -42,5 +42,9 @@ KUBERNETES_VERSION: v1.20.8+vmware.1
 TEMPLATE_NAME: ubuntu-2004-kube-v1.20.8+vmware.1-tkg.1-17589475007677388652
 ETCD_VERSION: v3.4.13_vmware.14
 DNS_VERSION: v1.7.0_vmware.12
+VCD_STORAGE_PROFILE: "*"
+K8S_DEFAULT_STORAGE_CLASS_NAME: "cloud-director-default"
+USE_DELETE_RECLAIM_POLICY: true
+FILE_SYSTEM_FORMAT: "ext4"
 
 SSH_PUBLIC_KEY_B64: ""
