[VCDA-3336] Installation of default storage class on cluster creation (#59)
* Initial commit to automatically install default storage class in workload cluster

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

* Default storage class parameter changes

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

* Address review comments

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

* Address review comments

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

* updated examples/capi-quickstart.yaml

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

* Add defaultStorageClassOptions in clusterctl generate input

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -52,6 +52,22 @@ spec:
                 type: object
               defaultComputePolicy:
                 type: string
+              defaultStorageClassOptions:
+                properties:
+                  fileSystemFormat:
+                    default: ext4
+                    type: string
+                  k8sStorageClassName:
+                    default: cloud-director-default
+                    type: string
+                  useDeleteReclaimPolicy:
+                    default: false
+                    type: boolean
+                  vcdStorageProfileName:
+                    type: string
+                required:
+                - vcdStorageProfileName
+                type: object
               org:
                 type: string
               ovdc:
