Rename parameter fileSystemFormat to fileSystem
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -54,7 +54,7 @@ spec:
                 type: string
               defaultStorageClassOptions:
                 properties:
-                  fileSystemFormat:
+                  fileSystem:
                     default: ext4
                     type: string
                   k8sStorageClassName:
