--- a/infrastructure-vcd/v0.5.1/clusterctl.yaml
+++ b/infrastructure-vcd/v0.5.1/clusterctl.yaml
@@ -46,6 +46,6 @@ DNS_VERSION: v1.7.0_vmware.12
 VCD_STORAGE_PROFILE: "*"
 K8S_DEFAULT_STORAGE_CLASS_NAME: "cloud-director-default"
 USE_DELETE_RECLAIM_POLICY: true
-FILE_SYSTEM_FORMAT: "ext4"
+FILE_SYSTEM: "ext4"
 
 SSH_PUBLIC_KEY_B64: ""
