--- a/infrastructure-vcd/v0.5.1/cluster-template-v1.20.8.yaml
+++ b/infrastructure-vcd/v0.5.1/cluster-template-v1.20.8.yaml
@@ -42,7 +42,7 @@ spec:
 #    vcdStorageProfileName: "${VCD_STORAGE_PROFILE}" # name of the VCD storage profile used to create the storage class
 #    k8sStorageClassName: ${K8S_DEFAULT_STORAGE_CLASS_NAME} # name of the storage class in kubernetes
 #    useDeleteReclaimPolicy: ${USE_DELETE_RECLAIM_POLICY} # if set to true, Delete will be used as the Reclaim policy for the storage class. Else, Retain will be used as the reclaim policy
-#    fileSystemFormat: ${FILE_SYSTEM_FORMAT} # file system format for the persistent volumes created from the storage class
+#    fileSystem: ${FILE_SYSTEM_FORMAT} # file system format for the persistent volumes created from the storage class
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
 kind: VCDMachineTemplate
