Add support for RDE ID in the CAPI Yaml specification
Signed-off-by: sayloo <sahithi.ayloo@gmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -74,6 +74,8 @@ spec:
                 type: string
               ovdcNetwork:
                 type: string
+              rdeId:
+                type: string
               site:
                 type: string
               userContext:
