--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -13,6 +13,9 @@ patchesStrategicMerge:
 - patches/webhook_in_vcdmachines.yaml
 - patches/webhook_in_vcdclusters.yaml
 - patches/webhook_in_vcdmachinetemplates.yaml
+#- patches/webhook_in_vcdmachines.yaml
+#- patches/webhook_in_vcdclusters.yaml
+#- patches/webhook_in_vcdmachinetemplates.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -20,6 +23,9 @@ patchesStrategicMerge:
 - patches/cainjection_in_vcdmachines.yaml
 - patches/cainjection_in_vcdclusters.yaml
 - patches/cainjection_in_vcdmachinetemplates.yaml
+#- patches/cainjection_in_vcdmachines.yaml
+#- patches/cainjection_in_vcdclusters.yaml
+#- patches/cainjection_in_vcdmachinetemplates.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
