Working cut with templates separated out
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/clusterctl.yaml
+++ b/clusterctl.yaml
@@ -19,6 +19,7 @@ providers:
 # Variables specific to "clusterctl init"
 VCD_PASSWORD_B64: ""
 VCD_USERNAME_B64: ""
+VCD_REFRESH_TOKEN_B64: ""
 
 # Variables specific to both "cluster init" and "clusterctl generate"
 VCD_SITE: "https://VCD_FQDN"
