--- a/config/manager/controller_manager_config.yaml
+++ b/config/manager/controller_manager_config.yaml
@@ -1,9 +1,9 @@
 vcd:
-  host: VCD_HOST # VCD endpoint with the format https://VCD_HOST. No trailing '/'
-  org: ORG # organization name associated with the user logged in to deploy clusters
-  vdc: OVDC # VDC name where the cluster will be deployed
-  network: NETWORK # OVDC network to use for cluster deployment
-  vipSubnet: VIP_SUBNET_CIDR # Virtual IP CIDR for the external network
+  host: ${VCD_SITE} # VCD endpoint with the format https://VCD_HOST. No trailing '/'
+  org: ${VCD_ORGANIZATION} # organization name associated with the user logged in to deploy clusters
+  vdc: ${VCD_ORGANIZATION_VDC} # VDC name where the cluster will be deployed
+  network: ${VCD_ORGANIZATION_VDC_NETWORK} # OVDC network to use for cluster deployment
+  vipSubnet: ${VCD_VIP_CIDR} # Virtual IP CIDR for the external network
 loadbalancer:
   oneArm:
     startIP: "192.168.8.2" # First IP in the IP range used for load balancer virtual service
