--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -9,11 +9,12 @@ namespace: capvcd-system
 namePrefix: capvcd-
 
 # Labels to add to all resources and selectors.
-#commonLabels:
-#  someName: someValue
+commonLabels:
+  cluster.x-k8s.io/provider: infrastructure-vcd
 
 resources:
   - namespace.yaml
+  - secrets.yaml
 
 bases:
 - ../crd
