Automate using crd parameters

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
@@ -48,6 +48,10 @@ spec:
                 description: ComputePolicy is the compute policy to be used on this
                   machine
                 type: string
+              isMigratedR1Machine:
+                description: IsMigratedR1Machine indicates that the machine was created
+                  as part of R1 cluster creation
+                type: boolean
               providerID:
                 description: ProviderID will be the container name in ProviderID format
                   (vmware-cloud-director://<vm id>)
