--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -19,7 +19,7 @@ webhooks:
       - apiGroups:
           - infrastructure.cluster.x-k8s.io
         apiVersions:
-          - v1alpha3
+          - v1beta1
         operations:
           - CREATE
           - UPDATE
