--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
@@ -1,3 +1,4 @@
+
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -8,6 +9,7 @@ metadata:
   name: vcdmachinetemplates.infrastructure.cluster.x-k8s.io
   labels:
     cluster.x-k8s.io/v1alpha4: v1alpha4
+    cluster.x-k8s.io/vbeta1: v1beta1
 spec:
   group: infrastructure.cluster.x-k8s.io
   names:
@@ -18,6 +20,67 @@ spec:
   scope: Namespaced
   versions:
   - name: v1alpha4
+    schema:
+      openAPIV3Schema:
+        description: VCDMachineTemplate is the Schema for the vcdmachinetemplates
+          API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: VCDMachineTemplateSpec defines the desired state of VCDMachineTemplate
+            properties:
+              template:
+                properties:
+                  spec:
+                    description: Spec is the specification of the desired behavior
+                      of the machine.
+                    properties:
+                      bootstrapped:
+                        description: Bootstrapped is true when the kubeadm bootstrapping
+                          has been run against this machine
+                        type: boolean
+                      catalog:
+                        description: Catalog hosting templates
+                        type: string
+                      computePolicy:
+                        description: ComputePolicy is the compute policy to be used
+                          on this machine
+                        type: string
+                      providerID:
+                        description: ProviderID will be the container name in ProviderID
+                          format (vmware-cloud-director://<vm id>)
+                        type: string
+                      template:
+                        description: TemplatePath is the path of the template OVA
+                          that is to be used
+                        type: string
+                    type: object
+                required:
+                - spec
+                type: object
+            required:
+            - template
+            type: object
+          status:
+            description: VCDMachineTemplateStatus defines the observed state of VCDMachineTemplate
+            type: object
+        type: object
+    served: true
+    storage: false
+    subresources:
+      status: {}
+  - name: v1beta1
     schema:
       openAPIV3Schema:
         description: VCDMachineTemplate is the Schema for the vcdmachinetemplates
