--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
-        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:main-branch
+        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:sahithi
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
