--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -1,28 +1,31 @@
 
 ---
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
   creationTimestamp: null
   name: validating-webhook-configuration
 webhooks:
-  - clientConfig:
-      caBundle: Cg==
-      service:
-        name: webhook-service
-        namespace: system
-        path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-vcdcluster
-    failurePolicy: Fail
-    matchPolicy: Equivalent
-    name: validation.vcdcluster.infrastructure.cluster.x-k8s.io
-    rules:
-      - apiGroups:
-          - infrastructure.cluster.x-k8s.io
-        apiVersions:
-          - v1beta1
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - vcdclusters
-    sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-vcdcluster
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: validation.vcdcluster.infrastructure.cluster.x-k8s.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    - DELETE
+    resources:
+    - vcdclusters
+  sideEffects: None
