--- a/infrastructure-vcd/v0.8.0/infrastructure-components.yaml
+++ b/infrastructure-vcd/v0.8.0/infrastructure-components.yaml
@@ -610,7 +610,7 @@ apiVersion: v1
 data:
   controller_manager_config.yaml: |
     vcd:
-      vipSubnet: 10.150.191.253/19 # Virtual IP CIDR for the external network
+      vipSubnet: ${VCD_VIP_CIDR} # Virtual IP CIDR for the external network
     loadbalancer:
       oneArm:
         startIP: "192.168.8.2" # First IP in the IP range used for load balancer virtual service
