Enable validate/mutate/conversion webhooks; converters between v1alpha4 and v1 beta1 (#82)
Previous changesets mentioned below focused on the framework for API upgrades, hub and spoke setup, webhook enablement through kustomize/manifests, and the placeholder definitions for the validation, mutation, and conversion logic.

40fdd09
40fdd09

*The current changeset focuses on:

Few more additions in the api/v1alpha4 and api/v1beta1 directories to get the prior plumbing fully functional.
Autogenerated converter code via conversion-gen tool, example: api/v1alpha4/zz_generated.conversion.go
Actual converter logic between v1alpha4 and v1beta1 for all the CAPVCD APIs, example: api/v1alpha4/vcdcluster_conversion.go
Added minimal logic for the validation/mutate webhooks (create, update, delete).
Few more changes in the config manifests to fix cert-manager issues.
Few dependencies in the Vendor package.

*Tests done:

CAPVCD deployment installation and start-up.
Cluster creation through CAPI yaml of both v1alpha4 and v1beta1 APIs.
One can retrieve CAPVCD objects via both v1alpha4 and v1beta1 format.
kubectl get vcdcluster.v1alpha4.infrastructure.cluster.x-k8s.io myCluster -o yaml
kubectl get vcdcluster.v1beta1.infrastructure.cluster.x-k8s.io myCluster -o yaml

*Pending items:

Add a target in the MAKE file to use conversion-gen. We will need to run the target every time we add new properties in v1beta1.
After I enabled the validation webhook, it expects "defaultStorageClassOptions" to be non-null value. We need to investigate further and do the necessary changes.
Figure out the debug setup of CAPVCD with the newly included manifests.

*Conversion-gen command usage:

./conversion-gen --input-dirs=./api/v1alpha4 --output-file-base=zz_generated.conversion --go-header-file=./boilerplate.go.txt --build-tag=ignore_autogenerated_conversions

--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -1,28 +1,61 @@
 
 ---
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
+kind: MutatingWebhookConfiguration
+metadata:
+  creationTimestamp: null
+  name: mutating-webhook-configuration
+webhooks:
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-vcdcluster
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: default.vcdcluster.infrastructure.cluster.x-k8s.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - vcdclusters
+  sideEffects: None
+
+---
+apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
   creationTimestamp: null
   name: validating-webhook-configuration
 webhooks:
-  - clientConfig:
-      caBundle: Cg==
-      service:
-        name: webhook-service
-        namespace: system
-        path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-vcdcluster
-    failurePolicy: Fail
-    matchPolicy: Equivalent
-    name: validation.vcdcluster.infrastructure.cluster.x-k8s.io
-    rules:
-      - apiGroups:
-          - infrastructure.cluster.x-k8s.io
-        apiVersions:
-          - v1alpha3
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - vcdclusters
-    sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-vcdcluster
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: validation.vcdcluster.infrastructure.cluster.x-k8s.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    - DELETE
+    resources:
+    - vcdclusters
+  sideEffects: None
