--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
@@ -117,7 +117,8 @@ spec:
                         type: string
                       sizingPolicy:
                         description: SizingPolicy is the sizing policy to be used
-                          on this machine
+                          on this machine. If no sizing policy is specified, default
+                          sizing policy will be used to create the nodes
                         type: string
                       template:
                         description: TemplatePath is the path of the template OVA
