--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
@@ -159,14 +159,13 @@ spec:
               catalog:
                 description: Catalog hosting templates
                 type: string
+              computePolicy:
+                description: ComputePolicy is the compute policy to be used on this
+                  machine
+                type: string
               providerID:
                 description: ProviderID will be the container name in ProviderID format
                   (vmware-cloud-director://<vm id>)
-                type: string
-              sizingPolicy:
-                description: SizingPolicy is the sizing policy to be used on this
-                  machine. If no sizing policy is specified, default sizing policy
-                  will be used to create the nodes
                 type: string
               template:
                 description: TemplatePath is the path of the template OVA that is
