--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -264,11 +264,16 @@ spec:
                 type: array
               infraId:
                 type: string
+              metadataUpdated:
+                description: MetadataUpdated denotes that the metadata of Vapp is
+                  updated.
+                type: boolean
               ready:
                 description: Ready denotes that the vcd cluster (infrastructure) is
                   ready.
                 type: boolean
             required:
+            - metadataUpdated
             - ready
             type: object
         required:
