[VCDA-3532] Add RDEId into VApp metadata (#103)
* add metadata into VApp

Signed-off-by: ymo24 <ymo@vmware.com>

* reduce duplicated patchVCDCluster, avoid potential mix

Signed-off-by: ymo24 <ymo@vmware.com>

* Status field vAppMetadataUpdated should be optional

Signed-off-by: ymo24 <ymo@vmware.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -264,6 +264,10 @@ spec:
                 type: array
               infraId:
                 type: string
+              VAppMetadataUpdated:
+                description: MetadataUpdated denotes that the metadata of Vapp is
+                  updated.
+                type: boolean
               ready:
                 description: Ready denotes that the vcd cluster (infrastructure) is
                   ready.
