--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -195,10 +195,14 @@ spec:
                 type: string
               ovdcNetwork:
                 type: string
+              parentUid:
+                type: string
               rdeId:
                 type: string
               site:
                 type: string
+              useAsManagementCluster:
+                type: boolean
               userContext:
                 properties:
                   password:
@@ -264,13 +268,17 @@ spec:
                 type: array
               infraId:
                 type: string
-              VAppMetadataUpdated:
-                description: MetadataUpdated denotes that the metadata of Vapp is
-                  updated.
-                type: boolean
+              parentUid:
+                type: string
               ready:
                 description: Ready denotes that the vcd cluster (infrastructure) is
                   ready.
+                type: boolean
+              useAsManagementCluster:
+                type: boolean
+              vappmetadataUpdated:
+                description: MetadataUpdated denotes that the metadata of Vapp is
+                  updated.
                 type: boolean
             required:
             - ready
